# Messaging_Platform_Application

./: .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: devBuild.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  conversations.rs  db.rs  friends.rs  lib.rs  main.rs  profile.rs
src/components/: AppSidebar.tsx  MessageDisplay.tsx
src/components/panels/: FriendsPanel.tsx  ProfilePanel.tsx
src/components/ui/: scroll-area.tsx
src/hooks/: useWebSocket.ts
src/lib/: supabase.tsx
src/pages/: AuthPage.tsx  ChatPage.tsx  DirectMessagePage.tsx  FriendsPage.tsx  HomePage.tsx  ProfilePage.tsx  SignupPage.tsx
src/styles/: AuthPage.css  ChatPage.css  DirectMessagePage.css  FriendsPage.css  HomePage.css  MessageDisplay.css  ProfilePage.css  Sidebar.css
